--- a/SRex/Views/Home/Index.cshtml
+++ b/SRex/Views/Home/Index.cshtml
@@ -2,30 +2,37 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+<div class="row" style="margin-top: 2rem">
+    <div class="col-md-4">
+        <h2>Dev Blog</h2>
+        <p>
+            Keep up-to-date with my latest projects. Games, asset creation, silly side-projects, or mathematical foolery; it's all fair game!
+        </p>
+    </div>
+    <div class="col-md-4">
+        <h2>Unity Assets</h2>
+        <p>Want to kickstart your game? I'm constantly rolling out new free and paid assets, so check it out here!</p>
+    </div>
+    <div class="col-md-4">
+        <h2>Forums</h2>
+        <p>Have an issue with an existing asset? Want to request a feature? This is the place to go.</p>
+    </div>
 </div>
-
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p><a class="btn btn-primary" href="#">Read &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <p><a class="btn btn-primary" href="#">Browse &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <p><a class="btn btn-primary" href="#">Browse &raquo;</a></p>
     </div>
+</div>
+
+<div class="jumbotron">
+    <h1>About Me</h1>
+    <p class="lead">I'm a standalone developer with a burning passion for the arts concerning mathematics and game creation. I create and maintain both paid and free Unity assets, 
+    as well as work on games in my free time with the hope that one day I can quit my day job and work full-time as an indie developer.</p>
+    <p><a href="https://asp.net" class="btn btn-default">Learn more &raquo;</a></p>
 </div>
