Layout change Home

--- a/SRex/Views/Home/Index.cshtml
+++ b/SRex/Views/Home/Index.cshtml
@@ -1,38 +1,39 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Home";
 }
 
-<div class="row" style="margin-top: 2rem">
-    <div class="col-md-4">
-        <h2>Dev Blog</h2>
+<div class="row mt-5">
+    <div class="col-lg-3 col-md-6 pt-2">
+        <h2>Projects</h2>
         <p>
             Keep up-to-date with my latest projects. Games, asset creation, silly side-projects, or mathematical foolery; it's all fair game!
         </p>
+        <p><a class="btn btn-primary" href="#">Browse &raquo;</a></p>
     </div>
-    <div class="col-md-4">
+    <div class="col-lg-3 col-md-6 pt-2">
         <h2>Unity Assets</h2>
-        <p>Want to kickstart your game? I'm constantly rolling out new free and paid assets, so check it out here!</p>
+        <p>Want to kickstart your game? I'm constantly rolling out new free and paid assets. Check it out here!</p>
+        <p><a class="btn btn-primary" href="#">Browse &raquo;</a></p>
     </div>
-    <div class="col-md-4">
+
+    <div class="col-lg-3 col-md-6 pt-2">
         <h2>Forums</h2>
-        <p>Have an issue with an existing asset? Want to request a feature? This is the place to go.</p>
-    </div>
-</div>
-<div class="row">
-    <div class="col-md-4">
-        <p><a class="btn btn-primary" href="#">Read &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
+        <p>Have an issue with an existing asset? Want to request a feature? This is the where the community lives.</p>
         <p><a class="btn btn-primary" href="#">Browse &raquo;</a></p>
     </div>
-    <div class="col-md-4">
-        <p><a class="btn btn-primary" href="#">Browse &raquo;</a></p>
+
+    <div class="col-lg-3 col-md-6 pt-2">
+        <h2>Twitch</h2>
+        <p>Sometimes I stream my development. Watch me make mistakes!</p>
+        <p><a class="btn btn-primary" href="https://www.twitch.tv/SpensasaurusRex">Watch &raquo;</a></p>
     </div>
 </div>
 
 <div class="jumbotron">
     <h1>About Me</h1>
-    <p class="lead">I'm a standalone developer with a burning passion for the arts concerning mathematics and game creation. I create and maintain both paid and free Unity assets, 
-    as well as work on games in my free time with the hope that one day I can quit my day job and work full-time as an indie developer.</p>
-    <p><a href="https://asp.net" class="btn btn-default">Learn more &raquo;</a></p>
+    <p class="lead">
+        I'm a standalone developer with a burning passion for the arts concerning mathematics and game development. 
+        I create and maintain both <a href="#">paid</a> and <a href="#">free</a> Unity assets,
+        as well as work on <a href="#">games</a> in my free time with the hope that one day I can work as a full-time indie developer.
+    </p>
 </div>
